// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidTrackerComponent matches snapshot 1`] = `
<div
  className="bid-tracker-page"
>
  <NotificationsSection
    markBidTrackerNotification={[Function]}
    notifications={
      Object {
        "count": 4,
        "results": Array [
          Object {
            "date_created": "2017-10-31T18:14:07.262935Z",
            "date_updated": "2017-10-31T18:14:07.262965Z",
            "id": 1,
            "is_read": false,
            "message": "Saved search New BidCycle has 13 new results available",
            "owner": "townpostj",
            "tags": Array [
              "waiver",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:56:55.508891Z",
            "date_updated": "2017-11-01T14:56:55.508920Z",
            "id": 6,
            "is_read": false,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) has been offered a handshake.",
            "owner": "townpostj",
            "tags": Array [
              "bidding",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:57:10.189772Z",
            "date_updated": "2017-11-01T14:57:10.189803Z",
            "id": 8,
            "is_read": true,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) is under panel review.",
            "owner": "townpostj",
            "tags": Array [
              "waiver",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:57:17.257837Z",
            "date_updated": "2017-11-01T14:57:17.257866Z",
            "id": 9,
            "is_read": false,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) has been approved by panel.",
            "owner": "townpostj",
            "tags": Array [
              "bidding",
            ],
          },
        ],
      }
    }
    notificationsIsLoading={false}
  />
  <div
    className="usa-grid-full"
  >
    <div
      className="usa-width-one-half bid-tracker-greeting-container"
    >
      <div
        className="hello-greeting bid-tracker-greeting"
      >
        Bid Tracker
      </div>
    </div>
    <div
      className="usa-width-one-half bid-tracker-cdo-email-container"
    >
      <div
        className="bid-tracker-cdo-email"
      >
        <ContactCDOButton
          email="shadtrachl@state.gov"
        />
      </div>
    </div>
  </div>
  <div
    className="bid-tracker-content-container"
  >
    <div
      className="usa-grid-full"
    >
      <BidTrackerCardList
        acceptBid={[Function]}
        bids={
          Array [
            Object {
              "approved_date": "2017-12-20",
              "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
              "closed_date": "2017-12-20",
              "create_date": "2017-12-20",
              "declined_date": "2017-12-20",
              "draft_date": "2017-12-20",
              "handshake_accepted_date": "2017-12-20",
              "handshake_declined_date": "2017-12-20",
              "handshake_offered_date": "2017-12-20",
              "id": 3,
              "in_panel_date": "2017-12-20",
              "is_priority": false,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2015-08-05",
                "grade": "03",
                "id": 226,
                "position_number": "10035561",
                "post": Object {
                  "id": 199,
                  "location": "Curacao",
                },
                "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
                "title": "POLITICAL/ECONOMIC OFFICER",
                "update_date": "2017-06-08",
              },
              "reviewer": Object {
                "email": "woodwardw@state.gov",
                "first_name": "Wendy",
                "is_cdo": false,
                "last_name": "Woodward",
                "phone_number": "555-555-5555",
                "username": "woodwardw",
              },
              "scheduled_panel_date": "2017-12-20",
              "status": "approved",
              "submitted_date": "2017-12-20",
              "update_date": "2017-12-20",
              "user": "rehmant",
            },
            Object {
              "approved_date": "2017-12-20",
              "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
              "closed_date": "2017-12-20",
              "create_date": "2017-12-20",
              "declined_date": "2017-12-20",
              "draft_date": "2017-12-20",
              "handshake_accepted_date": "2017-12-20",
              "handshake_declined_date": "2017-12-20",
              "handshake_offered_date": "2017-12-20",
              "id": 1,
              "in_panel_date": "2017-12-20",
              "is_priority": true,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2006-09-20",
                "grade": "05",
                "id": 1,
                "position_number": "00003026",
                "post": Object {
                  "id": 235,
                  "location": "Freetown, Sierra Leone",
                },
                "skill": "OFFICE MANAGEMENT (9017)",
                "title": "OMS (COM)",
                "update_date": "2017-06-08",
              },
              "reviewer": Object {
                "email": "woodwardw@state.gov",
                "first_name": "Wendy",
                "is_cdo": false,
                "last_name": "Woodward",
                "phone_number": "555-555-5555",
                "username": "woodwardw",
              },
              "scheduled_panel_date": "2017-12-20",
              "status": "closed",
              "submitted_date": "2017-12-20",
              "update_date": "2017-12-20",
              "user": "rehmant",
            },
            Object {
              "approved_date": "2017-12-20",
              "bidcycle": "Demo BidCycle 2017-10-31 16:00:51.254762",
              "closed_date": "2017-12-20",
              "create_date": "2017-12-20",
              "declined_date": "2017-12-20",
              "draft_date": "2017-12-20",
              "handshake_accepted_date": "2017-12-20",
              "handshake_declined_date": "2017-12-20",
              "handshake_offered_date": "2017-12-20",
              "id": 2,
              "in_panel_date": "2017-12-20",
              "is_priority": false,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2006-09-20",
                "grade": "04",
                "id": 84,
                "position_number": "56001600",
                "post": Object {
                  "id": 195,
                  "location": "The Hague, Netherlands",
                },
                "skill": "SECURITY (2501)",
                "title": "SPECIAL AGENT",
                "update_date": "2017-06-08",
              },
              "reviewer": Object {
                "email": "woodwardw@state.gov",
                "first_name": "Wendy",
                "is_cdo": false,
                "last_name": "Woodward",
                "phone_number": "555-555-5555",
                "username": "woodwardw",
              },
              "scheduled_panel_date": "2017-12-20",
              "status": "closed",
              "submitted_date": "2017-12-20",
              "update_date": "2017-12-20",
              "user": "rehmant",
            },
          ]
        }
        declineBid={[Function]}
        deleteBid={[Function]}
        submitBid={[Function]}
        userProfile={
          Object {
            "bid_statistics": Array [
              Object {
                "draft": 1,
                "submitted": 1,
              },
            ],
            "cdo": Object {
              "email": "shadtrachl@state.gov",
              "first_name": "Leah",
              "initials": "LS",
              "last_name": "Shadtrach",
              "username": "shadtrachl",
            },
            "display_name": "John",
            "favorite_positions": Array [
              Object {
                "id": 1,
                "representation": "[00003026] OMS (COM) (Freetown, Sierra Leone)",
              },
              Object {
                "id": 4,
                "representation": "[00180000] OMS (DCM) (Addis Ababa, Ethiopia)",
              },
            ],
            "grade": "03",
            "id": 1,
            "initials": "JD",
            "is_cdo": false,
            "skills": Array [
              Object {
                "code": "6218",
                "cone": null,
                "description": "CONSTRUCTION ENGINEERING",
                "id": 63,
              },
              Object {
                "code": "6211",
                "cone": null,
                "description": "COMPUTER SCIENCE",
                "id": 40,
              },
            ],
            "user": Object {
              "email": "doej@state.gov",
              "first_name": "John",
              "initials": "JD",
              "last_name": "Doe",
              "username": "jdoe",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`BidTrackerComponent matches snapshot when bidListIsLoading is true 1`] = `
<div
  className="bid-tracker-page"
>
  <NotificationsSection
    markBidTrackerNotification={[Function]}
    notifications={
      Object {
        "count": 4,
        "results": Array [
          Object {
            "date_created": "2017-10-31T18:14:07.262935Z",
            "date_updated": "2017-10-31T18:14:07.262965Z",
            "id": 1,
            "is_read": false,
            "message": "Saved search New BidCycle has 13 new results available",
            "owner": "townpostj",
            "tags": Array [
              "waiver",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:56:55.508891Z",
            "date_updated": "2017-11-01T14:56:55.508920Z",
            "id": 6,
            "is_read": false,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) has been offered a handshake.",
            "owner": "townpostj",
            "tags": Array [
              "bidding",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:57:10.189772Z",
            "date_updated": "2017-11-01T14:57:10.189803Z",
            "id": 8,
            "is_read": true,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) is under panel review.",
            "owner": "townpostj",
            "tags": Array [
              "waiver",
            ],
          },
          Object {
            "date_created": "2017-11-01T14:57:17.257837Z",
            "date_updated": "2017-11-01T14:57:17.257866Z",
            "id": 9,
            "is_read": false,
            "message": "Your bid for [10035561] POLITICAL/ECONOMIC OFFICER (Curacao) has been approved by panel.",
            "owner": "townpostj",
            "tags": Array [
              "bidding",
            ],
          },
        ],
      }
    }
    notificationsIsLoading={false}
  />
  <div
    className="usa-grid-full"
  >
    <div
      className="usa-width-one-half bid-tracker-greeting-container"
    >
      <div
        className="hello-greeting bid-tracker-greeting"
      >
        Bid Tracker
      </div>
    </div>
    <div
      className="usa-width-one-half bid-tracker-cdo-email-container"
    >
      <div
        className="bid-tracker-cdo-email"
      >
        <ContactCDOButton
          email="shadtrachl@state.gov"
        />
      </div>
    </div>
  </div>
  <div
    className="bid-tracker-content-container"
  >
    <Spinner
      size="big"
      type="homepage-position-results"
    />
  </div>
</div>
`;
